--- a/css/style.css
+++ b/css/style.css
@@ -133,7 +133,7 @@ border-radius: 2rem;
 
 
 
-#lit div p:first-line {
+#lit div p:first-child:first-line {
 
     font-weight: 900;
     font-variant-caps: small-caps;
@@ -144,7 +144,7 @@ border-radius: 2rem;
     
 }
 
-#lit div p:first-letter {
+#lit div p:first-child:first-letter {
 
     font-size:170px;
     font-family: "Patrick Hand"
@@ -153,20 +153,69 @@ border-radius: 2rem;
 }
 
 
+/* Tablet Size */
 
-
-@media screen and (min-width: 60 em;) {
+@media screen and (min-width: 60em) {
     figure {
     display: grid;
     grid-template-columns: 2fr 1fr;
 
+
     }
 
     figcaption {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 2rem;
-    margin-left: left;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 3rem;
+        margin-left: 1rem;
     }
-}
+
+    
+
+
+    #gallery img{
+
+        max-width: 100%;
+    }
+         
+
+        #lit div {
+            max-width: 100%;
+            columns: 45rem; }
+
+   
+            }
+
+
+/* Large Screen */
+
+@media screen and (min-width: 100em) {
+
+  #gallery {
+    display:grid;
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+
+  hr{ display:none;}
+
+  #gallery h2{
+    grid-column: 1/ -1;
+
+  }
+  
+  figure{
+    display: block;
+  }
+  
+
+  }
+
+
+
+
+
+
+
+
+
