--- a/css/nav.css
+++ b/css/nav.css
@@ -31,6 +31,7 @@ html{
     font-size: 1.5rem;
     margin-bottom: 1rem;
     padding: 1rem;
+ 
 
 
 }
@@ -61,9 +62,10 @@ html{
 
 .navbar-links li {
     list-style: none;
-    display: block;
+    display: none;
     padding: 0.5em 0;
 }
+
 
 /*  
  style all a tags in header 
@@ -90,7 +92,23 @@ html{
 
     }
 
+                    .nav-toggle: checked ~ .navbar-links {
+                        display: block;
+                                        }
 
+                    .nav-toggle {
+                        display: none;
+                                        }
+                    .nav-toggle-label {
+                        position: absolute;
+                        top: 0;
+                        left: 0;
+                        margin-left: 1em;
+                        height: 100%;
+                        display: flex;
+                        align-items: center;
+                        align-items: top;
+                    }
 
 
 /* 
@@ -122,3 +140,6 @@ such that no text wraps
 
     }
 }
+
+/* Hamburger Menu */
+
