--- a/css/style.css
+++ b/css/style.css
@@ -266,8 +266,9 @@ border-radius: 2rem;
     position: relative;
     /* margin-right: 99%;
     margin-left: 15%; */
-    margin-right: 99%;
-    margin-left: 6.5%;
+    /* margin-right: 99%;
+    margin-left: 6.5%; */
+    /* margin-right: 1rem; */
     width: 100%;
 }
 
@@ -427,10 +428,10 @@ figcaption {
    margin: 25rem auto;
   }
 
+.pic {
+    max-width:min-content;
+    
+}
 
-
-
-
-
-
-
+ 
+}
