--- a/css/nav.css
+++ b/css/nav.css
@@ -110,73 +110,70 @@ html{
                         align-items: top;
                     } */
 
+
 /* Hamburger Menu */
-.nav-checkbox:checked ~ .navbar-links li {
+
+    .nav-checkbox:checked ~ .navbar-links li {
     display: block;
-
-}
-
-.nav-checkbox {
-    display: none;
-}
-
-.nav-checkbox-label {
-   position: absolute;
-   top: 1;
-   left: 0; 
-   margin-left: 1em;
-   height: 100%;
-   
-  
-}
-
-.nav-checkbox-label span,
-.nav-checkbox-label span::before,
-.nav-checkbox-label span::after {
-    display: block;
-    background:#315B8F;
-    height: 5px;
-    width: 2em;
-    border-radius: 2px;
-    position: relative;
-}
-
-.nav-checkbox-label span::before,
-.nav-checkbox-label span::after {
-
-    content: '';
-    position: absolute;
-}
-
-.nav-checkbox-label span::before {
-    bottom: 10px;
-}
-
-.nav-checkbox-label span::after {
-
-    top: 10px;
-}
-
-/* 
-media query for non-mobile nav bar
-min-width set to width of nav elements 
-such that no text wraps 
-*/
-@media screen and (min-width: 60rem) {
-
-    /* .navbar-links {
-        display: flex;
-        justify-content: space-between;
-
-    } */
-
-    .navbar {
-        flex-direction: row;
-        justify-content: space-between;
-        
-
 
     }
+
+    .nav-checkbox {
+    display: none;
+    }
+
+    .nav-checkbox-label {
+        position: absolute;
+        top: 1;
+        left: 0; 
+        margin-left: 1em;
+        height: 100%;
+
+        }
+
+    .nav-checkbox-label span,
+    .nav-checkbox-label span::before,
+    .nav-checkbox-label span::after {
+       display: block;
+       background:#315B8F;
+       height: 5px;
+       width: 2em;
+       border-radius: 2px;
+       position: relative;
+         }
+
+    .nav-checkbox-label span::before,
+    .nav-checkbox-label span::after {
+       content: '';
+       position: absolute;
+      }
+
+    .nav-checkbox-label span::before {
+      bottom: 10px;
+     }
+
+    .nav-checkbox-label span::after {
+    top: 10px;
+        }
+
+        /* 
+        media query for non-mobile nav bar
+        min-width set to width of nav elements 
+        such that no text wraps 
+        */
+        @media screen and (min-width: 60rem) {
+
+            /* .navbar-links {
+            display: flex;
+            justify-content: space-between;
+
+            } */
+
+        .navbar {
+        flex-direction: row;
+        justify-content: space-between;
+    
+        }
 
     .navbar ul {
         display: flex;
@@ -187,4 +184,26 @@ such that no text wraps
     }
 }
 
+
+    @media screen and (min-width: 800px) {
+
+        .nav-checkbox-label {
+        display: none;
+        }
+      
+
+        .navbar-links li {
+        display: block;
+        }
+
+         nav ul {
+        display: flex;
+        justify-content:flex-end;
+    
+        }
+
+        .navbar-links a {
+        font-size: 3rem;
+        }
+}
 
