--- a/css/style.css
+++ b/css/style.css
@@ -323,7 +323,17 @@ legend {
 }
 
 
+/* Logo */
 
+.logo-img {
+    position: absolute;
+    bottom: 0;
+    display: flex;
+    align-items: center;
+    margin-left: 150px;
+    
+}
+    
 
 
 /* Tablet Size */
