--- a/css/nav.css
+++ b/css/nav.css
@@ -156,6 +156,9 @@ html{
     top: 10px;
         }
 
+
+  
+
         /* 
         media query for non-mobile nav bar
         min-width set to width of nav elements 
@@ -184,6 +187,7 @@ html{
     }
 }
 
+/* Media Query For Laptop */
 
     @media screen and (min-width: 800px) {
 
@@ -203,9 +207,14 @@ html{
         }
 
         .navbar-links a {
-        font-size: 3rem;
+        font-size: 2.5rem;
         }
 
-       
-}
+        .logo h1 {
+            margin-top: 0%;
+            margin-bottom: 0%;
+            height:max-content;
+            width: max-content;
+        }
+    }
 
