updating bio and hobbies

--- a/css/style.css
+++ b/css/style.css
@@ -125,6 +125,11 @@ margin-right: 99%;
     margin-left: 6.5%;
 width: 100%; }
 
+#hobbies p {
+    text-align: center;
+   
+}
+
 
 
 /* Gallery Section */
