--- a/css/nav.css
+++ b/css/nav.css
@@ -189,10 +189,9 @@ html{
         }
 
         .logo h1 {
-            margin-top: 0%;
-            margin-bottom: 0%;
-            height:max-content;
-            width: max-content;
+
+            margin-left: 67px;
+            
         }
     }
 
