--- a/css/style.css
+++ b/css/style.css
@@ -56,8 +56,8 @@ header {
  .pic {
     position: relative;
     margin-right: 10%;
-    margin-left: 1%;
     width: 100%;
+    border-radius: 10px;
     
 }
     
@@ -66,6 +66,7 @@ header {
     
 
 }
+
 
 
 /* Bio Section */
@@ -422,13 +423,15 @@ legend {
 
     .pic { 
         position: relative;
-        margin-right: 20%;
-        margin-left: 15%;
-        max-width: 50%;
+        margin-right: 45%;
+        margin-left: 10%;
+        max-width: 75%;
         align-items: center;
+        margin-top: 25px;
+        border: 18px solid #315B8F;
+        
     }
 
-    
 
     }
 
